# dedalus

./: .gitignore  API.md  CLAUDE.md  CMakeLists.txt  HANDOFF.md  INSTALL.md  IP.md  LLM.back.md  LLM.md  README.md  WHITEPAPER.md  ab.tsv  build.sh  cleanup.sh  dedalus_architectural_audit.docx  depth_provider_report.html  setup.sh
apps/: CMakeLists.txt  dedalus_core_stack.cpp  dedalus_dump_world.cpp  dedalus_ghost_scenario_eval.cpp  dedalus_mission_loop.cpp  dedalus_replay_mission.cpp  dedalus_replay_recording.cpp  dedalus_viewer.cpp
src/: CMakeLists.txt
src/avoidance/: compute_esdf.cpp  local_esdf_map.cpp  local_esdf_map_incremental.cpp  local_esdf_map_publisher.cpp  local_flight_map.cpp  local_flight_map_ingest.cpp  local_flight_map_mission.cpp  mission_local_obstacle_map.cpp  mission_local_planning_map.cpp  mission_local_planning_map_publisher.cpp  mission_local_planning_map_query.cpp  mission_local_planning_map_spatial.cpp  mission_local_planning_map_sqlite.cpp  mission_local_traversability_map.cpp  mission_local_traversability_map_publisher.cpp  mission_map_assimilator.cpp  mission_obstacle_map_artifact_writer.cpp  mission_obstacle_map_artifact_writer_env.cpp  mission_obstacle_map_delta_writer.cpp  mission_traversability_map_artifact_writer.cpp  mission_traversability_map_artifact_writer_env.cpp  trajectory_safety_evaluator.cpp
src/behavior/: airsim_velocity_sink.cpp  behavior_osd.cpp  behavior_spec.cpp  behavior_spec_strings.cpp  follow_geometry_policy.cpp  follow_geometry_policy_circle.cpp  follow_geometry_policy_follow.cpp  mavlink_gimbal_pointing_sink.cpp  mission_runtime.cpp  mission_runtime_dispatch.cpp  object_behavior_config.cpp  object_behavior_mission_controller.cpp  object_behavior_mission_controller_camera.cpp  object_behavior_mission_controller_sequence.cpp  object_behavior_mission_controller_tick.cpp  object_behavior_mission_controller_tick_execute.cpp  px4_bridge_command_sink.cpp  px4_mavlink_command_sink.cpp  target_selector.cpp  trajectory_mission_controller.cpp  trajectory_mission_controller_tick.cpp  velocity_trajectory.cpp  velocity_trajectory_parse.cpp
src/geometry/: pose_transform.cpp
src/perception/: ghost_targets.cpp  perception_pipeline.cpp
src/runtime/: camera_pointing_state_store.cpp  config_loader.cpp  core_stack_runner.cpp  core_stack_runner_run.cpp  perch_candidate_evaluator.cpp  pipeline_profiler.cpp  provider_registry.cpp  world_snapshot_stream_server.cpp  world_snapshot_stream_server_messages.cpp  world_snapshot_stream_server_publish.cpp
src/sensing/: airsim_depth_evidence_provider.cpp  airsim_depth_obstacle_detector.cpp  airsim_depth_obstacle_detector_impl.cpp  airsim_emulation_depth_obstacle_detector.cpp  cuda_depth_kernels.cu  depth_debug_annotator.cpp  depth_engine_utils.cpp  depth_projection_kernel.cpp  onnx_depth_engine.cpp  onnx_depth_engine_base.cpp  sensing_coverage.cpp  tensorrt_depth_engine.cpp  unidepth_v2_depth_engine.cpp  visual_depth_obstacle_detector.cpp
src/sensors/: async_prefetch_frame_source.cpp  ego_state_provider.cpp  recorded_frame_source.cpp  replay_frame_source.cpp  synthetic_frame_source.cpp  synthetic_mission_frame_source.cpp  visual_ego_state_provider.cpp
src/simulation/: airsim_providers.cpp  airsim_providers_binary_stream.cpp  airsim_sidecar_parser.cpp  bridge_transport.cpp  ghost_scenario.cpp  ghost_scenario_parse.cpp
src/visualization/: frame_annotator.cpp  frame_annotator_annotate.cpp  frame_annotator_ppm_sequence.cpp  obstacle_evidence_visualization.cpp  world_overlay_sidecar.cpp  world_to_image_projector.cpp
src/world_model/: in_memory_world_model.cpp  obstacle_products.cpp  rough_flight_map_builder.cpp  tactical_obstacle_mapper.cpp  world_snapshot.cpp  world_snapshot_publisher.cpp  world_snapshot_subscribers.cpp
tests/: CMakeLists.txt
tests/fixtures/: airsim_binary_bridge_ci_fake.py  airsim_binary_state_bridge_ci_fake.py  airsim_bridge_ci_fake.py  airsim_bridge_fake.py  airsim_ego_bridge_ci_fake.py  airsim_stream_bridge_ci_fake.py  px4_bridge_ci_stub.py
tests/integration/: test_airsim_visual_emulation_config_coverage.py  test_architectural_naming_checker.py  test_circle_trajectory_validator.py  test_ghost_annotation_artifacts.py  test_ghost_scenario_eval_cli.py  test_mission_abort_scenario.py  test_mission_artifact_validator.py  test_mission_campaign_runner.py  test_mission_evidence_retention.py  test_mission_scenario_runner.py  test_object_behavior_mission_smoke.py  test_obstacle_memory_manifest_summary.py  test_obstacle_sensing_evidence_snapshot_validator.py  test_ppm_sequence_mp4_export.py  test_replay_artifact_validator.py  test_replay_mission_smoke.py  test_replay_recording_smoke.py  test_validate_obstacle_memory_manifest.py  test_world_reprojection_artifacts.py
tests/unit/: test_airsim_depth_obstacle_detector.cpp  test_airsim_provider_boundary.cpp  test_airsim_velocity_command_sink.cpp  test_behavior_spec.cpp  test_camera_pointing_state_store.cpp  test_core_stack_config_loader.cpp  test_depth_provider_slots.cpp  test_esdf_streaming.cpp  test_evaluation_slot.cpp  test_ghost_scenario.cpp  test_latest_world_snapshot.cpp  test_local_esdf_map.cpp  test_local_esdf_map_incremental.cpp  test_local_flight_map.cpp  test_mission_local_obstacle_map.cpp  test_mission_local_planning_map_query.cpp  test_mission_local_planning_map_spatial.cpp  test_mission_local_planning_map_sqlite.cpp  test_mission_local_planning_map_streaming.cpp  test_mission_local_traversability_map.cpp  test_mission_runtime.cpp  test_mission_traversability_map_artifact_writer.cpp  test_object_behavior_mission_controller.cpp  test_obstacle_evidence_provider_contract.cpp  test_perception_world_model_flow.cpp  test_perch_candidate_evaluator.cpp  test_pipeline_profiler.cpp  test_pose_transform.cpp  test_ppm_frame_annotation_sink.cpp  test_provider_composition.cpp  test_pubsub.cpp  test_px4_bridge_command_sink.cpp  test_px4_mavlink_command_sink.cpp  test_recorded_frame_world_model_flow.cpp  test_sensing_coverage.cpp  test_target_selector.cpp  test_trajectory_mission_controller.cpp  test_trajectory_safety_evaluator.cpp  (+8 more)
(+376 files in other folders)
